adding CSRF request validation

--- a/jaggeryapps/admin/jaggery.conf
+++ b/jaggeryapps/admin/jaggery.conf
@@ -202,6 +202,14 @@
       "path": "samples/add_sample_users_finish.jag"
     }
   ],
+   "listeners" : [
+                  {
+                       "class" : "org.owasp.csrfguard.CsrfGuardServletContextListener"
+                  },
+                  {
+                       "class" : "org.owasp.csrfguard.CsrfGuardHttpSessionListener"
+                  }
+      ],
   "filters": [
     {
       "name": "SessionFilter",
@@ -224,6 +232,10 @@
     {
       "name": "URLBasedCachePreventionFilter",
       "class": "org.wso2.carbon.ui.filters.cache.URLBasedCachePreventionFilter"
+    },
+     {
+       "name" : "CSRFGuard",
+       "class" : "org.owasp.csrfguard.CsrfGuardFilter"
     }
   ],
   "filterMappings": [
@@ -238,8 +250,31 @@
     {
       "name": "URLBasedCachePreventionFilter",
       "url": "*.jag"
-    }
+    },
+             {
+                  "name" : "CSRFGuard",
+                  "url" : "/admin/*"
+             }
   ],
+       "servlets" : [
+            {
+                 "name" : "JavaScriptServlet",
+                 "class" : "org.owasp.csrfguard.servlet.JavaScriptServlet"
+            }
+       ],
+
+       "servletMappings" : [
+            {
+                 "name" : "JavaScriptServlet",
+                 "url" : "/csrf.js"
+            }
+       ],
+       "contextParams" : [
+            {
+                 "name" : "Owasp.CsrfGuard.Config",
+                 "value" : "/repository/conf/security/Owasp.CsrfGuard.dashboard.properties"
+            }
+       ],
   "errorPages": {
     "500": "/error/error500.html",
     "401": "/error/error401.html",
